--- a/index.html
+++ b/index.html
@@ -508,80 +508,44 @@
             <div class="two-column-carousel owl-carousel owl-theme owl-dots-none">
                 <div class="case-block-two">
                     <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="assets/images/gallery/gallery-7.jpg" alt="">
-                            <div class="client-box">
-                                <span>PuppyShop</span>
-                                <div class="client-logo"><img src="assets/images/icons/icon-1.png" alt=""></div>
-                            </div>
-                            <div class="link"><a href="https://whatevaaar.github.io/PuppyShopWebsite/index.html"><i class="flaticon-hyperlink"></i></a></div>
-                            <div class="overlay-layer"></div>
-                        </figure>
                         <div class="lower-content">
                             <div class="box">
                                 <div class="icon-box"><i class="flaticon-vision"></i></div>
                                 <p>eCommerce</p>
-                                <h3><a href="https://whatevaaar.github.io/PuppyShopWebsite/index.html">PuppyShop eCommerce</a></h3>
+                                <h3><a href="https://whatevaaar.github.io/PuppyShopWebsite/index.html">PuppyShop</a></h3>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="case-block-two">
                     <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="assets/images/gallery/gallery-8.jpg" alt="">
-                            <div class="client-box">
-                                <span>Cahum</span>
-                                <div class="client-logo"><img src="assets/images/icons/icon-2.png" alt=""></div>
+                        <div class="lower-content">
+                            <div class="box">
+                                <div class="icon-box"><i class="flaticon-vision"></i></div>
+                                <p>Bolsa de Trabajo</p>
+                                <h3><a href="https://extrategia.com/Metal">METAL</a></h3>
                             </div>
-                            <div class="link"><a href="project-details.html"><i class="flaticon-hyperlink"></i></a></div>
-                            <div class="overlay-layer"></div>
-                        </figure>
+                        </div>
+                    </div>
+                </div>
+                <div class="case-block-two">
+                    <div class="inner-box">
                         <div class="lower-content">
                             <div class="box">
                                 <div class="icon-box"><i class="flaticon-vision"></i></div>
                                 <p>Servicio Web/App Android</p>
-                                <h3><a href="project-details.html">App en Android para Cahum. Chat incluido.</a></h3>
+                                <h3><a href="">CAHUM APP</a></h3>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="case-block-two">
                     <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="assets/images/gallery/gallery-7.jpg" alt="">
-                            <div class="client-box">
-                                <span>Neuro Jump</span>
-                                <div class="client-logo"><img src="assets/images/icons/icon-1.png" alt=""></div>
-                            </div>
-                            <div class="link"><a href="project-details.html"><i class="flaticon-hyperlink"></i></a></div>
-                            <div class="overlay-layer"></div>
-                        </figure>
                         <div class="lower-content">
                             <div class="box">
                                 <div class="icon-box"><i class="flaticon-vision"></i></div>
-                                <p>Banking & Finance</p>
-                                <h3><a href="project-details.html">Consulting on Invoice Data Capture</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="case-block-two">
-                    <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="assets/images/gallery/gallery-8.jpg" alt="">
-                            <div class="client-box">
-                                <span>Neuro Jump</span>
-                                <div class="client-logo"><img src="assets/images/icons/icon-2.png" alt=""></div>
-                            </div>
-                            <div class="link"><a href="project-details.html"><i class="flaticon-hyperlink"></i></a></div>
-                            <div class="overlay-layer"></div>
-                        </figure>
-                        <div class="lower-content">
-                            <div class="box">
-                                <div class="icon-box"><i class="flaticon-vision"></i></div>
-                                <p>Entertainment</p>
-                                <h3><a href="project-details.html">Automate Feedback Analysis</a></h3>
+                                <p>VCard</p>
+                                <h3><a href="https://whatevaaar.github.io/BusinessCards/index.html?u=mauricio1">Tarjetas virtuales de presentación</a></h3>
                             </div>
                         </div>
                     </div>
